2006-04-06  Wim Taymans  <wim@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_init),
	(gst_qtdemux_handle_src_query), (gst_qtdemux_find_index),
	(gst_qtdemux_find_keyframe), (gst_qtdemux_find_segment),
	(gst_qtdemux_move_stream), (gst_qtdemux_perform_seek),
	(gst_qtdemux_do_seek), (gst_qtdemux_change_state),
	(gst_qtdemux_activate_segment),
	(gst_qtdemux_prepare_current_sample), (gst_qtdemux_advance_sample),
	(gst_qtdemux_loop_state_movie), (gst_qtdemux_loop),
	(qtdemux_parse_trak):
	Added full edit list support.
	Avoid overflows in prologue image detection code.
	Avoid roundoff errors in timestamp calculations.

2006-04-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  clean up so report properly on missing stuff
	  fix modplug detection

2006-04-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/Makefile.am:
	* ext/amrwb/amrwb-code/Makefile.am:
	  don't dist amr wb source code

2006-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: j^  <j at bootlab dot org>

	* ext/amrwb/gstamrwbdec.c:
	* ext/amrwb/gstamrwbenc.c:
	* ext/amrwb/gstamrwbparse.c:
	* ext/arts/gst_arts.c:
	* ext/artsd/gstartsdsink.c:
	* ext/audiofile/gstafparse.c:
	* ext/audiofile/gstafsink.c:
	* ext/audiofile/gstafsrc.c:
	* ext/cdaudio/gstcdaudio.c:
	* ext/directfb/dfbvideosink.c:
	* ext/divx/gstdivxdec.c:
	* ext/divx/gstdivxenc.c:
	* ext/dts/gstdtsdec.c: (gst_dtsdec_base_init):
	* ext/faac/gstfaac.c: (gst_faac_base_init):
	* ext/faad/gstfaad.c:
	* ext/gsm/gstgsmdec.c:
	* ext/gsm/gstgsmenc.c:
	* ext/hermes/gsthermescolorspace.c:
	* ext/ivorbis/vorbisfile.c:
	* ext/lcs/gstcolorspace.c:
	* ext/libfame/gstlibfame.c:
	* ext/libmms/gstmms.c: (gst_mms_base_init):
	* ext/musicbrainz/gsttrm.c: (gst_musicbrainz_base_init):
	* ext/nas/nassink.c: (gst_nassink_base_init):
	* ext/neon/gstneonhttpsrc.c:
	* ext/polyp/polypsink.c: (gst_polypsink_base_init):
	* ext/sdl/sdlaudiosink.c:
	* ext/sdl/sdlvideosink.c:
	* ext/shout/gstshout.c: